--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tanstack/react-query": "^5.39.0",
     "@tanstack/react-query-devtools": "^5.39.0",
+    "date-fns": "^3.6.0",
     "headlessui": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
